# hexlet_django_blog

./: db.sqlite3  pyproject.toml
hexlet_django_blog/: settings.py
